feat: Add seamless edit mode with API backend
- Add server.js for API-based editing
- Implement audio-preview-seamless-edit.html with edit mode
- Fix space key handling in edit mode
- Clean up redundant scripts/output folder
- Add proper error handling and status updates

--- a/audio-preview-seamless-edit.html
+++ b/audio-preview-seamless-edit.html
@@ -708,6 +708,11 @@
             }
             
             handleKeyboard(e) {
+                // Skip keyboard shortcuts when in edit mode
+                if (document.getElementById('scriptEdit').style.display === 'block') {
+                    return;
+                }
+
                 switch(e.code) {
                     case 'Space':
                         e.preventDefault();
